fixing post story spacing

--- a/src/scss/_objects.scss
+++ b/src/scss/_objects.scss
@@ -10,6 +10,17 @@
 	}
 }
 
+.audio-button {
+	background: $audio-green;
+	cursor: pointer;
+	color: $white;
+	color: #fff;
+	&:hover {
+		background: $audio-green-hover;
+		color: #fff;
+	}
+}
+
 .draft-button{
 	background-color: $draft-button;
 	cursor: pointer;
