--- a/src/scss/pages/_post-story.scss
+++ b/src/scss/pages/_post-story.scss
@@ -31,6 +31,12 @@
 	}
 }
 
+.field-wrap {
+	&.story-text, &.story-images, &.story-audio {
+		margin-bottom: 10px;
+	}
+}
+
 
 .type-active span {
 	margin: 0 10px 0 0;
